Changed Project SDK to Java 20, Implemented Rate Limiter and added documentation